# gromosPlsPls

./: .gitignore
gromos++/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Config.sh  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.in  libtool
gromos++/admin/containers/: build_docker_containers.sh
gromos++/admin/gitlab-ci/: gromos.gitlab-ci.yml
gromos++/cmake/: FindClipper.cmake  FindFFTW3.cmake  FindGMX.cmake  FindMDPP.cmake  config.h.in
gromos++/contrib/: 0index_contrib.doxy  CMakeLists.txt  Makefile.am  add_atom.cc  aggregates.cc  bb2tex.cc  bilayer_gel.cc  buildHybrid.py  cgLJpot.cc  cg_potential.cc  close_pair.cc  countbb.cc  crossdih_top.cc  cry_rms.cc  depsi2native.cc  diff_top.cc  dipole_pot.cc  distmat.cc  duplicate.cc  eds_mult_all.cc  ener_rplc.cc  ener_test.cc  espmap.cc  expand_ua.cc  fit_ener.cc  fit_ener_traj.cc  fit_rdc.cc  force.cc  gca_ener.cc  grid_dens.cc  gromacs2gromos.cc  helix_axis.cc  hvap.cc  iwdcf.cc  jepot.cc  lb_top.cc  local_comp.cc  m_ener.cc  make_rdc_spec.cc  make_sasa_top.cc  (+36 more)
gromos++/data/: CMakeLists.txt  Makefile.am  ene_ana.lib  ene_ana.md++.lib  ene_ana_gXX.lib  mk_script.lib  mkscript.lib  noecor.fletcher  noecor.gromos96  noecor.gromosXX  noecor.koning  noecor.wuthrich  noelib.45a3  noelib.53a6  pdb2g96.lib
gromos++/doc/: doxygen.conf.in  gromos++.doxy  tail.html  todo.doxy  todo.html
gromos++/examples/: Makefile.am  Makefile.in  buildHybrid.py  buildbox.inp  ex.top  extop.noe  fit_JJ.py  fit_Mj2.py  gathtraj.inp  gromos08.imd  hbond_peptide.arg  make_top_peptide.arg  mkscript.inp  pdb2g96.inp  ran_box.inp  rgyr.inp  rmsdmat2.inp  tser.inp
gromos++/examples_old/: buildbox.inp  checktopo.inp  cluster.inp  cluster2.inp  comtop.inp  ex.etrj  ex.top  ex2.top  exref.coo  frameout.inp  jval.inp  mkscript.lib  noecor.file  pdb2g96.lib  prepnoe.inp  prepnoenew.inp  probox.inp  progch.inp  rdf.inp  rmsd.inp  rmsdmat.inp  rmsf.inp  vmdam.inp
gromos++/packaging/: PACKAGING  control.debian  debian.control  solaris.admin  solaris.pkginfo
gromos++/programs/: 0index.doxy  CMakeLists.txt  Hbond.cc  Hbondinter.cc  Hbondintra.cc  LB_top.cc  Makefile  Makefile.am  Makefile.in  addvirt_top.cc  amber2gromos.cc  atominfo.cc  bar.cc  bilayer_dist.cc  bilayer_oparam.cc  bin_box.cc  block.h  build_box.cc  buildbox.cc  check_box.cc  check_top.cc  checkbox.cc  checktopo.cc  close_pair.cc  clusmol.cc  cluster.cc  cluster2.cc  cluster_analyze.cc  cluster_orig.cc  cog.cc  com_top.cc  comtop.cc  con_top.cc  contactnum.cc  contop.cc  convert.cc  copy_box.cc  cos_debye.cc  cos_dipole.cc  cos_epsilon.cc  (+157 more)
gromos++/programs/.deps/: Hbond.P  Hbondinter.P  Hbondintra.P  angle.P  buildbox.P  checkbox.P  cluster.P  comtop.P  contop.P  convert.P  copy_box.P  dihedral.P  dipole.P  dist.P  dist_rad.pp  edip.P  edyn.P  explode.P  frameout.P  gsfcenter.P  noe.P  oparam.P  perttop.P  redtop.P  rgyr.P  rgyr_BW5.P  rmsd.P  rmsf.P  tser.P  tstrip.P  ulf.P  vmdam.P  vmdamt.P
gromos++/programs/exa/: dg_ener.inp  diffus.inp  dist.inp  ene_ana.inp  ene_ana.lib  ene_ana2.inp  ex.noe  ex.top  ex.tr  frameout.inp  gathtraj.inp  hbond.inp  m_widom.inp  maketop.inp  mkscript.lib  noecornew.file  noelib.lib  noelibnew.lib  pdb2g96.inp  postcluster.inp  postnoe.inp  prep.noe  prepbbb.inp  prepnoenew.inp  probox.inp  ran_box.inp  rdf.inp  rgyr.inp  rmsd.inp  rmsdmat.inp  rmsf.inp  tser.inp  vmdam.inp
gromos++/src/: CMakeLists.txt  Doxygen.h  Makefile  Makefile.am  Makefile.in  g++config
gromos++/src/args/: Arguments.cc  Arguments.h  Arguments.t.cc  BoundaryParser.cc  BoundaryParser.h  CMakeLists.txt  GatherParser.cc  GatherParser.h  Makefile  Makefile.am  Makefile.in  OutformatParser.cc  OutformatParser.h  ReferenceParser.cc  ReferenceParser.h
gromos++/src/bound/: Boundary.cc  Boundary.h  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  RectBox.cc  RectBox.h  RectBox.t.cc  Triclinic.cc  Triclinic.h  TruncOct.cc  TruncOct.h  TruncOct.t.cc  Vacuum.cc  Vacuum.h
gromos++/src/extralib/: Makefile.am  vmdplugin.cc
gromos++/src/fit/: AtomDistances.cc  AtomDistances.h  CMakeLists.txt  FastRotationalFit.cc  FastRotationalFit.h  Makefile  Makefile.am  Makefile.in  PositionUtils.cc  PositionUtils.h  PositionUtils.t.cc  Reference.cc  Reference.h  Reference.t.cc  RotationalFit.cc  RotationalFit.h  RotationalFit.t.cc  TranslationalFit.cc  TranslationalFit.h  TranslationalFit.t.cc
gromos++/src/gcore/: Angle.cc  Angle.h  AngleType.cc  AngleType.h  AtomPair.cc  AtomPair.h  AtomTopology.cc  AtomTopology.h  AtomTopology.t.cc  BbEnd.cc  BbEnd.h  BbEnd.t.cc  BbLink.cc  BbLink.h  BbSolute.cc  BbSolute.h  BbSolute.t.cc  Bond.cc  Bond.h  BondType.cc  BondType.h  Box.cc  Box.h  BuildingBlock.cc  BuildingBlock.h  CGType.h  CMakeLists.txt  Constraint.cc  Constraint.h  CrossDihedral.cc  CrossDihedral.h  Dihedral.cc  Dihedral.h  DihedralType.cc  DihedralType.h  Exclusion.cc  Exclusion.h  Exclusion.t.cc  GromosForceField.cc  GromosForceField.h  (+43 more)
gromos++/src/gio/: BlockInput.h  BlockInput.t.cc  BlockInput.tcc  CMakeLists.txt  Ginstream.cc  Ginstream.h  InAmberTopology.cc  InAmberTopology.h  InBFactorOccupancy.cc  InBFactorOccupancy.h  InBuildingBlock.cc  InBuildingBlock.h  InBuildingBlock.t.cc  InCIF.cc  InCIF.h  InChargeGroups.cc  InChargeGroups.h  InG96.cc  InG96.h  InG96.t.cc  InIACElementNameMapping.cc  InIACElementNameMapping.h  InLinkingBlock.cc  InLinkingBlock.h  InPDB.cc  InPDB.h  InParameter.cc  InParameter.h  InParameter.t.cc  InPtTopology.cc  InPtTopology.h  InTopology.cc  InTopology.h  InTopology.t.cc  Makefile  Makefile.am  Makefile.in  OutBuildingBlock.cc  OutBuildingBlock.h  OutCif.cc  (+27 more)
gromos++/src/gmath/: CMakeLists.txt  Correlation.cc  Correlation.h  Correlation.t.cc  Distribution.cc  Distribution.h  Distribution.t.cc  Expression.cc  Expression.h  Expression.t.cc  Makefile  Makefile.am  Makefile.in  Matrix.cc  Matrix.h  Matrix.t.cc  Mesh.cc  Mesh.h  Mesh.t.cc  Physics.cc  Physics.h  RandGauss.h  Stat.cc  Stat.h  StatDisk.cc  StatDisk.h  Vec.cc  (+5 more)
(+621 files in other folders)
