# This is the File that generates Makefile.in
# through automake.

SUBDIRS = src\
          programs

extradatadir = $(pkgdatadir)
examplesdir = $(pkgdatadir)/examples

extradata_DATA = 	data/ene_ana.lib \
			data/hbond.massfile \
			data/joblist.perturbation \
			data/joblist.startup \
			data/mkscript.lib \
			data/mtb_end.dat \
			data/noecor.fletcher \
			data/noecor.gromos96 \
			data/noecor.koning \
			data/noecor.wuthrich \
			data/noelib.45a3 \
			data/noelib.53a6 \
			data/pdb2g96.lib \
			data/spc.dat

examples_DATA =		\
			programs/exa/bin_box.inp \
			programs/exa/buildbox.inp \
			programs/exa/checktopo.inp \
			programs/exa/clusmol.inp \
			programs/exa/cluster.inp \
			programs/exa/cluster2.inp \
			programs/exa/cog.inp \
			programs/exa/comtop.inp \
			programs/exa/contop.inp \
			programs/exa/cov_ener.inp \
			programs/exa/dg_ener.inp \
			programs/exa/diffus.inp \
			programs/exa/dist.inp \
			programs/exa/dppctre.top \
			programs/exa/dppctre.tr \
			programs/exa/dssp.inp \
			programs/exa/edyn.inp \
			programs/exa/ene_ana.inp \
			programs/exa/ener.inp \
			programs/exa/espmap.inp \
			programs/exa/ex.etrj \
			programs/exa/ex.mpt \
			programs/exa/ex.noe \
			programs/exa/ex.top \
			programs/exa/ex.tr \
			programs/exa/exref.coo \
			programs/exa/extop.noe \
			programs/exa/frameout.doc \
			programs/exa/frameout.inp \
			programs/exa/gathtraj.inp \
			programs/exa/hbond.inp \
			programs/exa/hbond_trehalose_lipid.inp \
			programs/exa/hbond_trehalose_solvent.inp \
			programs/exa/hbond_trehalose_trehalose.inp \
			programs/exa/jval.inp \
			programs/exa/m_widom.inp \
			programs/exa/maketop.inp \
			programs/exa/mass.file \
			programs/exa/mkscript.inp \
			programs/exa/mkscript.lib \
			programs/exa/mtb_add.dat \
			programs/exa/nb_ener.inp \
			programs/exa/neighbours.inp \
			programs/exa/nhoparam.inp \
			programs/exa/pairener.inp \
			programs/exa/pdb2g96.inp \
			programs/exa/pdb2g96.lib \
			programs/exa/postcluster.inp \
			programs/exa/postnoe.inp \
			programs/exa/prep.dat \
			programs/exa/prep.noe \
			programs/exa/prepbbb.inp \
			programs/exa/prepnoe.inp \
			programs/exa/prepnoenew.inp \
			programs/exa/probox.inp \
			programs/exa/procmt_list.inp \
			programs/exa/progca.inp \
			programs/exa/progch.inp \
			programs/exa/propertyrmsd.inp \
			programs/exa/protcf.inp \
			programs/exa/pt_top.inp \
			programs/exa/ran_box.inp \
			programs/exa/rdf.inp \
			programs/exa/redtop.inp \
			programs/exa/rgyr.inp \
			programs/exa/rmsd.inp \
			programs/exa/rmsdmat.inp \
			programs/exa/rmsdmat2.inp \
			programs/exa/rmsf.inp \
			programs/exa/tser.inp \
			programs/exa/tstrip.inp \
			programs/exa/vmdam.inp

